Closed Bug 85535 Opened 23 years ago Closed 23 years ago

M091 crashes in PS printing [@ nsPostScriptObj::end_document]

Categories

(Core :: Printing: Output, defect)

x86
Linux
defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla0.9.3

People

(Reporter: greer, Assigned: kmcclusk)

References

Details

(Keywords: crash, topcrash)

Crash Data

Attachments

(2 files)

A lot of users of the M091 build are experiencing crashes while printing PS 
documents:

(31615431) 
URL:http://www.arl.hpc.mil/PET/cta/ccm/training/courses/matdum/tb_formalism/node
3.html
     (31615431) Comments: I was trying to print this page to a file when a crash
ocurred.

     (31594581) URL: http://www.atnf.csiro.au/~rgooch/linux/docs/devfs.html
     (31594581) Comments: Printing page to a file. Crash happened immediately
after pressing the"Print" button.

     (31592137) Comments: Printing to postcript

     (31587779) URL: homelink.fleet.com
     (31587779) Comments: Printing an html page to a file called
receipts/homelink2001Jun11.ps

     (31561132) Comments: Trying to print a order receipt page

     (31558318) URL: www.mapquest.com
     (31558318) Comments: printing an image to a PS file

     (31549519) Comments: I wanted to print a page to a file. After clicking OK
in the Print dialogthe Mozilla crashed.
     (31502163) URL: www.spiegel.de
     (31502163) Comments: Printing the page to a file (A4 format

     (31478307) URL: www.hollytreeinn.com
     (31478307) Comments: Tried to print.

     (31474215) URL: http://www.laverdad.com
     (31474215) Comments: printing to file... 

     (31467518) URL: Trying to print homepage of http://www.autosupply.co.nz
     (31467518) Comments: Attempted to print.  Chose print to file.  Selected A4
paper size.  Pressed the print button and browser crashed.  Platform: Moz/5
0.9.1 sea installer.  RedHat Linux 6.2.  Installed as root in /usr/local/mozilla
run as normal user.  Have old .mozilla
     (31467518) Comments:  prefs dir from 0.9.

The stack trace is not too revealing:

         nsPostScriptObj::end_document()
    nsPostScriptObj::end_document() 8a6bd2be

We could use an in house repro.
Adding crash, topcrash and qawanted keywords
Keywords: crash, qawanted, topcrash
Keywords: nsenterprise
Severity: normal → major
Target Milestone: --- → mozilla0.9.2
Taking this bug
Assignee: dcone → kmcclusk
I can reproduce this bug. Simply enter a directory that can not be written to or 
give a relative path for the file. If a full path is given to a directory that 
can be written to it does not crash.
Status: NEW → ASSIGNED
*** Bug 87587 has been marked as a duplicate of this bug. ***
*** Bug 84722 has been marked as a duplicate of this bug. ***
Keywords: nsBranch
Target Milestone: mozilla0.9.2 → mozilla0.9.3
The patch checks for a null mPrintContext in the destructor of the PostScript
object. The pointer is null if the begin document fails because the user enters
a filename which can not be opened.  filenames with relative paths, non-existent
directories, and trying to open a file in directory that the user doesn't have
write permissions are examples.

The patch fixes the crash, but it doesn't report any error to the user.
I filed a new bug 87727 to cover adding a notification to the user that the file
open failed.
sr=attinasi on the patch 39994 (the tabbing seems off though, please 
double-check that).
r=dcone
a= asa@mozilla.org for checkin to 0.9.2 branch.
(on behalf of drivers)
Checked in patch to both th 0.9.2 branch and trunk
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
both me and greer verified this puppy....

verified in 6/27 linux builds...
Status: RESOLVED → VERIFIED
Keywords: qawanted
Crash Signature: [@ nsPostScriptObj::end_document]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: