check for null mPrintContext in nsPostScriptObj destructor to fix crash when the open of the postscript file fails. bug 85535. sr=attinasi@netscape.com, r=dcone@netscape.com